// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default layout should return default layout 1`] = `
<div id="app" class="aliceblue-mode">
  <nuxt></nuxt>
</div>
`;

exports[`default layout should return default layout with dark 1`] = `
<div id="app" class="dark-mode">
  <nuxt></nuxt>
</div>
`;
